<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.leandro.weather.ui.viewmodel.DetailsViewModel" />
        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".ui.fragment.DetailsFragment">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_arrow_back" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="35dp"
                    android:src="@drawable/ic_sun_and_cloudy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="90dp"
                    android:text="@string/more_information"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/cityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textSize="40sp"
                tools:text="Cidade" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    tools:text="nublado" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textSize="50sp"
                        tools:text="30" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="top"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_celsius" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="top"
                        android:src="@drawable/ic_thermometer_down" />

                    <TextView
                        android:id="@+id/minTempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        tools:text="Mín: 22ºC" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="top"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_thermometer_up" />

                    <TextView
                        android:id="@+id/maxTempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        tools:text="Máx: 30ºC" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_sunny" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/windSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="top"
                android:padding="5dp"
                android:src="@drawable/ic_wind_speed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/wind_speed"
                android:textAlignment="viewStart"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/windSpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textSize="15sp"
                tools:text="4,1 m/seg" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/visibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/windSpeed">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="top"
                android:padding="5dp"
                android:src="@drawable/ic_visibility" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/visibility"
                android:textAlignment="viewStart"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/visibilityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textSize="15sp"
                tools:text="4,1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visibility">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="top"
                android:padding="5dp"
                android:src="@drawable/ic_humidity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/humidity"
                android:textAlignment="viewStart"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/humidityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textSize="15sp"
                tools:text="44%" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidity">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="top"
                android:padding="5dp"
                android:src="@drawable/ic_atmospheric_pressure" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/atmospheric_pressure"
                android:textAlignment="viewStart"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pressureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:textSize="15sp"
                tools:text="1013 hPa" />

        </LinearLayout>

    </LinearLayout>

</layout>